Fix top padding from covering navbar
After adding StorageOS CSS, the navbar grows covering the top parts of
the main sections.

--- a/assets/scss/_main-container.scss
+++ b/assets/scss/_main-container.scss
@@ -10,7 +10,7 @@
     main {
         section:first-of-type {
             @include media-breakpoint-up(md) {
-                padding-top: 8rem;
+                padding-top: 9.6rem;
             }
         }
 
@@ -25,7 +25,7 @@
 
     main {
         @include media-breakpoint-up(md) {
-            padding-top: 5.5rem;
+            padding-top: 7.5rem;
         }
 
 
