--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -49,7 +49,8 @@
         svg {
             display: inline-block;
             margin: 0 10px;
-            height: 30px;
+            max-width: 280px;
+            height: auto;
         }
     }
 
