--- a/assets/scss/_sidebar-toc.scss
+++ b/assets/scss/_sidebar-toc.scss
@@ -12,7 +12,7 @@
     }
 
     order: 2;
-    padding-top: 0.75rem;
+    padding-top: 7rem;
     padding-bottom: 1.5rem;
     vertical-align: top;
 
